2007-05-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/it.msg: Added italian translation (thanks to Luca
	Brivio)

	* src/mod_muc/mod_muc_room.erl: More accurate invitation errors
	(thanks to Magnus Henoch)

2007-04-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster_odbc.erl: Don't deliver roster items in "None +
	Pending In" state
	* src/mod_roster.erl: Likewise

2007-04-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_socket.erl: Added API for monitoring socket
	processes
	* src/ejabberd_frontend_socket.erl: Likewise
	* src/ejabberd_c2s.erl: Added socket monitoring

	* src/mod_muc/mod_muc_room.erl: Fixed the stop reason for the
	destroy event

2007-04-09  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_sm.erl: Minor optimisation

	* src/ejabberd_system_monitor.erl: Experimental watchdog
	* src/ejabberd_sup.erl: Likewise
	* src/ejabberd_config.erl: Likewise

2007-03-22  Mickael Remond  <mickael.remond@process-one.net>

	* src/guide.tex: Fixed typo.

2007-03-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Better behaviour under high load

2007-03-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s.erl: Don't bounce packets with "error" and
	"result" type

	* src/ejabberd_s2s.erl: Fixed spelling

	* src/ejabberd_s2s.erl: Don't start s2s process for existing
	connection in case of race condition

2007-03-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_service.erl: Added shaper_rule option, changed
	service connection log message

2007-03-13  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_service.erl: Add extra info in the log about which
	components is connected and which Erlang process is handling
	it. This is usefull in context where many types of components are
	used (Thanks to Jerome Sautret) (EJAB-211).

2007-03-10  Mickael Remond  <mickael.remond@process-one.net>

	* src/web/ejabberd_http.erl: Support for binaries in ejabberd HTTP